2024-05-29T01:24:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9278752320 # 312
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-29
* notice: last 14d: unq all: 60 121
* notice: prev accum: outdated-unq outdated-all / unq all: 3350 7697 / 3435 7819
* notice: next accum: outdated-unq outdated-all / unq all: 3351 7699 / 3435 7820
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +6 -0 -0 / 3 6
* notice: removed / changed dates: [2024-05-14] / [2024-05-28]

2024-05-28T12:35:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9269398497 # 311
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-28
* notice: last 14d: unq all: 60 121
* notice: prev accum: outdated-unq outdated-all / unq all: 3350 7697 / 3432 7814
* notice: next accum: outdated-unq outdated-all / unq all: 3350 7697 / 3435 7819
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -1 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2024-05-14 2024-05-28]

2024-05-28T01:21:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9262075597 # 310
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-28
* notice: last 14d: unq all: 59 117
* notice: prev accum: outdated-unq outdated-all / unq all: 3340 7685 / 3431 7813
* notice: next accum: outdated-unq outdated-all / unq all: 3350 7697 / 3432 7814
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-05-13] / [2024-05-27]

2024-05-27T12:35:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9254932012 # 309