@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-16T00:39:55Z",
-  "count" : 20,
+  "timestamp" : "2024-05-29T12:36:06Z",
+  "count" : 19,
   "count_minmax" : [ 19, 20 ],
-  "count_decinc" : [ -0, +20 ],
+  "count_decinc" : [ -1, +20 ],
   "uniques" : 15,
   "uniques_minmax" : [ 15, 15 ],
   "uniques_decinc" : [ -0, +15 ]
