@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-29T01:24:57Z",
+  "timestamp" : "2024-05-29T12:36:06Z",
   "count_outdated" : 7699,
   "uniques_outdated" : 3351,
-  "count" : 7820,
-  "uniques" : 3435,
+  "count" : 7821,
+  "uniques" : 3436,
   "clones" : [
     {
       "timestamp": "2024-05-15T00:00:00Z",
-      "count": 20,
+      "count": 19,
       "count_minmax": [ 19, 20 ],
-      "count_decinc": [ 0, 20 ],
+      "count_decinc": [ 1, 20 ],
       "uniques": 15,
       "uniques_minmax": [ 15, 15 ],
       "uniques_decinc": [ 0, 15 ]
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-05-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
