@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2024-05-15T00:00:00Z",
-      "count": 20,
+      "count": 19,
       "uniques": 15
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2024-05-28T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-05-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
